Mise en place de la sauvegarde/chargement des configurations

--- a/src/config_1.properties
+++ b/src/config_1.properties
@@ -1,1 +1,9 @@
+sizeScreen = 400
 numberFourmis = 150
+time = 50
+numberFood = 2
+speedPheromones = 1
+numberCoccinelles = 0
+numberFourmiliers = 0
+numberRonds = 0
+paintBody = 0
